[project]
name = "telegram-chatbot-with-ai"
version = "0.1.0"
description = "Telegram chatbot using Google Gemini AI"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20.0",
    "python-dotenv>=1.0.0",
    "google-generative-ai>=0.17.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"